# 8am

./: .Dockerignore  .gitignore  Dockerfile  Dockerfile.full  classes.py  debug_source.py  dec_reader.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json  webserver.py
.github/: dependabot.yml
api/: asgi.py  debug_source.py  dec_reader.py  webserver.py
sharaga_ics/: classes.py  debug_source.py  dec_reader.py  webserver.py
static/: .gitignore  changelog.html  gcal.html  index.html  manifest.json  package-lock.json  package.json  webpack.config.js
static/js/: sharaga.js
web/: .env.development  .env.production  .eslintrc.cjs  .gitignore  _redirects  capacitor.config.json  index.html  jsconfig.json  main.html  og.psd  package-lock.json  package.json  postcss.config.js  template.html  tsconfig.json  vite.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
web/android/app/: build.gradle
web/css/: animations.css  buttons.css  icons.css  index.css  ios.css  modal.css  pwa.css  toast.css
web/css/md3/: colors.css  theme.light.css  tokens.css
web/html/: index.html  ios_modal.html  no_cal.html  pwa_header.html  template.html
web/html/calEmpty/: calError.html  calLoading.html  (+2 more)
web/js/: custom-elements.js  devmenu.js  entry.js  icalpreview.js  icons.js  ios_modal.js  misc.js  modal.js  pwa.js  pwa_add.js  sharaga.js  sw-control.js  sw.js  theming.js  toast.js  worker.js
web/patches/: @fullcalendar+icalendar+5.11.3.patch
web/public/: _redirects
web/src/: App.vue  main.js  polyfills.js  sw.js  swmgmt.vue  theming.js
(+51 files in other folders)
