[tool.poetry]
name = "sharaga_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
aiohttp = "^3.8.1"
ics = "^0.7"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
aioredis = "^2.0.1"
fakeredis = "^1.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
