[tool.poetry]
name = "sharaga_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
aiohttp = "^3.8.4"
ics = "^0.7"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
fakeredis = "^2.10.2"
packaging = "^23.0"
redis = "^4.5.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
